# edge_panel

./: .gitignore  README.md  collect.py  config.yaml.example  pyproject.toml  requirements.txt  run.py  setup_cron.sh
backend/: config.py  main.py  scheduler.py  storage.py
backend/collectors/: local.py  ssh.py
frontend/: index.html  script.js  style.css
