[project]
name = "edge-panel"
version = "0.1.0"
description = "Edge browser new-tab panel with server metrics and Cursor usage chart"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.111.0",
    "uvicorn[standard]>=0.29.0",
    "paramiko>=3.4.0",
    "psutil>=5.9.8",
    "pyyaml>=6.0.1",
    "httpx>=0.27.0",
]

[tool.uv]
dev-dependencies = []
